<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add">Add</string>
    <string name="add_deadline">Add mini deadline</string>
    <string name="add_img">Add image</string>
    <string name="anonymous_data_lost">Since you are currently an anonymous user, all your data will be lost. Are you sure you want to logout?</string>
    <string name="app_instructions">Swipe goals right to mark them complete/incomplete and left to delete them. Click on goals to open them. Although this app works both offline and online, images can be saved or viewed only when online.</string>
    <string name="app_name">Goal Ninja</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="before_deadline">\'s deadline has passed</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="continue_without_account">Continue without account</string>
    <string name="create_goal">Create Goal</string>
    <string name="deadline">Deadline</string>
    <string name="deadline_config_change">A change in the device\'s configuration, such as the orientation, forced Android to close the dialog</string>
    <string name="deadlines_channel_desc">Notifies you when the deadline of a goal or mini deadline has arrived</string>
    <string name="deadlines_channel_id">io.github.neelkamath.deadlines</string>
    <string name="deadlines_notification_name">Deadlines</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete account</string>
    <string name="email">email</string>
    <string name="enter_email_pwd">Please enter an email and password</string>
    <string name="example_note">Cardio Sunday, Tuesday, Friday\nWeight training Monday, Thursday, Saturday\nYoga Wednesday</string>
    <string name="goal_already_exists">That goal already exists</string>
    <string name="goal_could_not_save">The goal couldn\'t be saved due to an error</string>
    <string name="goal_deadline_reached">Swipe left to mark it complete. If you still haven\'t finished it, delay the deadline.</string>
    <string name="goal_example">Run 30 minutes daily/Stop smoking</string>
    <string name="goal_not_loaded">The goals couldn\'t be loaded</string>
    <string name="idea_example">Buy weights</string>
    <string name="ideas">Ideas</string>
    <string name="images_cannot_save">The images couldn\'t be saved as there was no internet connection</string>
    <string name="img_not_uploaded">The image hasn\'t uploaded yet</string>
    <string name="instructions">Instructions</string>
    <string name="internet_needed">You need to be connected to the internet</string>
    <string name="item_already_exists">That item already exists</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="mini_deadline_deadline_reached">If you\'ve completed it, mark it so. Otherwise, modify the deadline.</string>
    <string name="mini_deadline_note">Note (e.g., current weight: 99 lbs)</string>
    <string name="mini_deadlines">Mini deadlines (click to edit)</string>
    <string name="no">No</string>
    <string name="no_file_access">The app cannot access the file system.</string>
    <string name="no_goal">You didn\'t specify a deadline</string>
    <string name="no_ideas">You didn\'t specify five or more ideas</string>
    <string name="no_item">You didn\'t specify an item</string>
    <string name="no_milestone">You didn\'t specify the milestone</string>
    <string name="no_progress_entry">Either set yesterday\'s progress entry as completed if you worked on it or give a reason why you didn\'t.</string>
    <string name="no_reasons">Enter at least one reason</string>
    <string name="note">Optional Note</string>
    <string name="notify_time">Set notification time</string>
    <string name="ok">OK</string>
    <string name="parse_app_id">210ee941-9831-4d1a-86da-473d34c93bb8</string>
    <string name="parse_server_url">https://parse.buddy.com/parse</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="progress_channel_desc">Reminds you to update your progress chart daily.</string>
    <string name="progress_channel_id">io.github.neelkamath.progress</string>
    <string name="progress_chart">Progress Chart</string>
    <string name="progress_notification_name">Progress chart</string>
    <string name="pwd">password</string>
    <string name="pwd_reset_sent">An email was sent to reset your password</string>
    <string name="reason_example">Get stronger</string>
    <string name="reasons">Reasons</string>
    <string name="reasons_reason">Whenever you feel demotivated, look at the reasons you noted down for your goal to remember why it\'s so important.</string>
    <string name="remove_img">Remove image</string>
    <string name="reset_pwd">Reset password</string>
    <string name="review">Review</string>
    <string name="review_channel_desc">Reminds you to update your goal every thirty days since its creation so you can update it as per your progress.</string>
    <string name="review_channel_id">io.github.neelkamath.review</string>
    <string name="review_notification_name">Review goals monthly</string>
    <string name="save">Save</string>
    <string name="search_menu_title">Search</string>
    <string name="signup">Signup</string>
    <string name="signup_to_backup">Signup to backup</string>
    <string name="skip_reason">Reason for skipping</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="the_mini_deadline">Mini deadline (e.g., lose 5 lbs)</string>
    <string name="today_deadline">\'s deadline is today!</string>
    <string name="update_goal">Update Goal</string>
    <string name="update_today_progress">Update today\'s progress chart for</string>
    <string name="update_yesterday_progress">Update yesterday\'s progress chart for</string>
    <string name="use_progress_chart">Use a progress chart</string>
    <string name="verify_account_deletion">Are you sure you want to delete your account?</string>
    <string name="verify_email">Please verify your account by checking the email sent</string>
    <string name="verify_goal_deletion">Are you sure you want to delete this goal?</string>
    <string name="verify_progress_deletion">Are you sure you want to delete all your saved progress?</string>
    <string name="wait_for_img_upload">Please wait for the images to finish uploading</string>
    <string name="what">What You Want To Accomplish</string>
    <string name="why_review">Update your goal as per your progress on it</string>
    <string name="x">x</string>
    <string name="yes">Yes</string>
</resources>
