<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18sp" android:textStyle="bold" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/what" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <EditText android:id="@+id/whatEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/goal_example" android:ems="10" android:inputType="textPersonName" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:id="@+id/textView3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/deadline" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintLeft_toLeftOf="0"/>
            <CalendarView android:id="@+id/calendarView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.492" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:id="@+id/textView6" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/reasons" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
                <EditText android:id="@+id/reasonEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/reason_example" android:ems="10" android:width="0dp" android:layout_weight="1" android:inputType="textPersonName"/>
                <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add" android:width="0dp" android:layout_weight="1" android:onClick="addReason" style="@style/Widget.Material.Button.Borderless.Colored"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView android:id="@+id/reasonsRecyclerView" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:id="@+id/textView2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/ideas" android:layout_weight="1" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
                <EditText android:id="@+id/ideaEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/idea_example" android:ems="10" android:layout_weight="1" android:inputType="textPersonName"/>
                <Button android:id="@+id/button3" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add" android:layout_weight="1" android:onClick="addIdea" style="@style/Widget.Material.Button.Borderless.Colored"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView android:id="@+id/ideasRecyclerView" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:id="@+id/textView4" android:paddingTop="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/mini_deadlines" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <Button android:id="@+id/button2" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/add_deadline" android:width="0dp" android:layout_weight="1" android:onClick="addMiniDeadline" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" style="@style/Widget.Material.Button"/>
            <android.support.v7.widget.RecyclerView android:id="@+id/deadlinesRecyclerView" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="8dp" android:layout_weight="1"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:id="@+id/textView8" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/note" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <EditText android:id="@+id/noteEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/example_note" android:ems="10" android:inputType="textMultiLine" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <TextView android:textSize="18sp" android:textStyle="bold" android:id="@+id/textView7" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/progress_chart" android:textAlignment="center" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <Switch android:id="@+id/progressSwitch" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/use_progress_chart" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
            <android.support.v7.widget.RecyclerView android:id="@+id/progressRecyclerView" android:layout_width="match_parent" android:layout_height="match_parent"/>
            <Button android:id="@+id/doneButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:layout_weight="1" android:onClick="verifyGoal" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
