<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/pwdEditText"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="0" />

    <EditText
        android:id="@+id/pwdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0" />

    <Button
        android:id="@+id/button6"
        style="@style/Widget.Material.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toStartOf="0" />

    <Button
        android:id="@+id/button7"
        style="@style/Widget.Material.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="signUp"
        android:text="@string/signup"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        style="@style/Widget.Material.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="resetPwd"
        android:text="@string/reset_pwd"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toTopOf="0"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0"
        app:layout_constraintTop_toTopOf="0" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.Material.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="signInAnonymously"
        android:text="@string/continue_without_account"
        app:layout_constraintBottom_toBottomOf="0"
        app:layout_constraintEnd_toEndOf="0"
        app:layout_constraintStart_toStartOf="0" />
</android.support.constraint.ConstraintLayout>
